# xian-linter

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: ARCHITECTURE.md  BACKLOG.md  README.md
tests/: README.md  test_linter.py
xian_linter/: README.md  __init__.py  __main__.py  linter.py  server.py
