[tool.poetry]
name = "xian-linter"
version = "0.3.0"
description = "Smart contract linter for the Xian blockchain"
authors = ["Endogen <endogen@xian.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyflakes = "^3.2.0"
xian-contracting = ">=1.0.0,<2.0.0"
pydantic = ">=2.0,<3"
fastapi = {version = ">=0.115.6", optional = true}
uvicorn = {version = ">=0.34.0", optional = true}

[tool.poetry.extras]
server = ["fastapi", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xian-linter = "xian_linter.server:run_server"
