[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-linter"
version = "0.3.0"
description = "Smart contract linter for the Xian blockchain"
readme = "README.md"
authors = [{ name = "Xian Network", email = "info@xian.org" }]
requires-python = ">=3.12"
dependencies = [
    "pyflakes>=3.2,<4",
    "pydantic>=2,<3",
    "xian-contracting>=1.0.1,<2",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.6,<1",
    "uvicorn>=0.34,<1",
]

[project.scripts]
xian-linter = "xian_linter.server:run_server"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "ruff>=0.15.6,<0.16",
]

[tool.uv.sources]
xian-contracting = { path = "../xian-contracting", editable = true }

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 80
target-version = "py312"
exclude = ["contract.py", "contract.py.b64", "contract.py.gz"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
